ajout google analytic 2nd page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,17 @@
 <html>
     <head>
         <title>Contact</title>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-B8MZ7FWKDD"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-B8MZ7FWKDD');
+  </script>
     </head>
+    
     <body onload="alert('Vous vous \352tes fait pi\351ger par un phishing. Heureusement pour vous, ceci est un test réalisé au sein de Promeo. Pour le bon déroulé du test, merci de ne pas divulger l\'information à d\'autres.')">
         <!-- the content goes here -->
     </body>
